# octopus_cicd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  unit-tests.yml
ci/github/: unit-tests.yml
ci/gitlab-ci/: .gitlab-ci.yml
ci/scripts/: run_lint.sh  run_unit_tests.sh
octopus/: __init__.py  main.py
octopus/ci/: __init__.py  base.py  github.py  gitlab.py  jenkins.py
octopus/core/: __init__.py  container.py  service.py
octopus/dsl/: __init__.py  checker.py  config.py  constants.py  dag_manager.py  dsl_config.py  dsl_service.py  dsl_test.py  interface.py  parser.py  runner.py  service.py  test.py  validator.py  variable.py
octopus/dsl/test_data/: config_sample.yaml  config_sample_v0.1.0.yaml
octopus/dsl/ut/: test_checker.py  test_config.py  test_dag_manager.py  test_dsl_config.py  test_dsl_service.py  test_dsl_test.py  test_runner.py  test_variable.py
octopus/orchestration/: __init__.py  composer.py  manager.py
octopus/orchestration/ut/: test_manager.py
octopus/tests/: README.md
