[project]
name = "octopus"
version = "0.1.0"
description = "A flexible CICD infrastructure toolkit for test orchestration and container management"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "pyyaml>=6.0",           # DSL 解析
    "docker>=7.0.0",         # 容器管理
    "click>=8.0.0",          # CLI 工具
    "jinja2>=3.0.0",        # 模板渲染
    "python-gitlab>=4.4.0",  # GitLab API 客户端
    "PyGithub>=2.2.0",      # GitHub API 客户端
    "python-jenkins>=1.8.0", # Jenkins API 客户端
    "requests>=2.31.0",      # HTTP 客户端
]
requires-python = "^3.10"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# 启用 pycodestyle, pyflakes, isort 等规则
select = ["E", "F", "I", "N", "W", "B"]
ignore = []
line-length = 100

# 兼容性设置
target-version = "py310"

[tool.ruff.lint]
# 允许使用 `#noqa` 注释来禁用规则
ignore-init-module-imports = true

[tool.ruff.format]
# 格式化配置
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto" 